--- a/Analysis/quick_analysis_fixed.ipynb
+++ b/Analysis/quick_analysis_fixed.ipynb
@@ -71,7 +71,7 @@
     "    data = [[r'$a_A$', np.mean(a_A), np.var(a_A)],\n",
     "    [r'$b_A$', np.mean(b_A), np.var(b_A)],\n",
     "    [r'$a_\\tau$', np.mean(a_delay), np.var(a_delay)],\n",
-    "    [r'$b_\\tau$', np.mean(a_delay), np.var(b_delay)]]\n",
+    "    [r'$b_\\tau$', np.mean(b_delay), np.var(b_delay)]]\n",
     "    headers=['Hyperparameter', 'Mean', 'Variance']\n",
     "    print(pd.DataFrame(data,[1,2,3,4],headers))\n",
     "    \n",
